# outcomist_collab

./: README.md  package-lock.json  package.json  rename-to-webapp.sh
archive/autonomous_agent/: CANVAS_UI_GUIDE.md  CANVAS_VS_DASHBOARD.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  README_API.md  SCENARIO_READINESS_MATRIX.md  SCENARIO_TEST_FINDINGS.md  SCENARIO_TEST_SUMMARY.md  SECURITY.md  TEST_UX_NOW.md  UX_TESTING_GUIDE.md  WEB_APP_COMPLETE.md  WEB_APP_PLAN.md  frogger_game.py  pyproject.toml  run_server.sh  test_command_line_output.txt  test_output.txt  test_results.txt  tic-tac-toe.html  tictactoe.html
archive/autonomous_agent/docs/: PLANNER_IMPLEMENTATION.md  executor_module.md
archive/autonomous_agent/examples/: planner_example.py
archive/autonomous_agent/memory/: 1b057dc7-7358-466d-a347-2a0e868c2096.db  2102cb2e-774e-4bcd-a7fb-c3617a362c83.db  2d254530-74e1-4b4d-829a-03a6401a5285.db  34cde639-ee16-4050-b7c7-e5ceb4caf7c7.db  35c54eed-005c-40a4-b54f-fe5fdce5f332.db  3b82564d-1f94-4c53-b782-51eaf0647e00.db  469e8c28-be61-4fcc-8ef1-133aaf281657.db  5412f568-e761-4bad-9198-0472452c9de9.db  613db17b-4f8b-4d58-9b77-1e6fd0d36052.db  683102f5-4e20-4fb5-a1d1-5da679c1c3b1.db  6870b464-ad7a-4de5-9ffe-169951fbe2c4.db  6c9d59ae-0edb-401c-baef-f1ff63810a21.db  716cb116-e4eb-49bd-af35-a83df110fc92.db  87f53692-7fed-415b-a754-5347505662f8.db  89c384e4-7241-4f7d-b954-57dd5ab7e7fd.db  98e912fa-7f3d-4676-89a2-4fd85db65542.db  b398d588-6d45-4143-8cb2-b8bff8933b9e.db  b6308493-0c19-4c5c-bb9f-da62dd9762cc.db  (+8 more)
docs/: README.md  (+1 more)
outcomist/backend/: .env.example  Dockerfile  pyproject.toml  test_api.py
(+246 files in other folders)
